fix: 菜单树构建的时间复杂度由O(n²)降到O(n)